deploy: a67ac86fa5db33e7ecc8ca4f60f28d673fdefdcf

--- a/404.html
+++ b/404.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>404 Page not found | Pravin&#39;s Blog</title>
   
-  <link rel="stylesheet" href="https://modothprav.github.io/blog/assets/css/blog.css" />
+  <link rel="stylesheet" href="http://pravinmodotholi.me/blog/assets/css/blog.css" />
   
-  <link rel="stylesheet" href="https://modothprav.github.io/blog/assets/css/common.css" />
+  <link rel="stylesheet" href="http://pravinmodotholi.me/blog/assets/css/common.css" />
   </head>
   <body>
     <main>
       <header>
-  <a class="site-title" href="https://modothprav.github.io/blog/">Pravin&#39;s Blog</a>
+  <a class="site-title" href="http://pravinmodotholi.me/blog/">Pravin&#39;s Blog</a>
 </header>
 
       <section class="article">
@@ -23,7 +23,7 @@
           </h2>
         </div>
         <div class="content">
-          This page dosen't exists, head back to <a href="https://modothprav.github.io/blog/">Homepage</a>
+          This page dosen't exists, head back to <a href="http://pravinmodotholi.me/blog/">Homepage</a>
         </div>
       </section>
     </main>
